<resources>
    <string name="app_name">CBTApp</string>

    <string name="TL">Talent \n Leasing</string>
    <string name="IR">International \n Recruitment</string>

    <string name="HomeIntro"><b>CBT</b> is a specialist recruitment consultancy with a network of recruitment partners across the Globe.
        \n\n <u>Click here to find out more.</u></string>

    <string name="ExplainText">Every week we share Top Profiles from our <b>Talent Pool</b>.
        \n\nWe give a taste of our best profiles from <b> Engineering</b>, <b>ICT</b>, and <b>BPO Tech</b>.
        \n\nThis app is a quick way to find all the best candidates from 2 categories:
        \n<b>—Talent Leasing:</b> Permanent contracts
        \n<b>—International Recrutment:</b> Temporary contracts\n</string>

    <string name="AccessPoolText"><b>Want to have access</b> to the full list of candidates?\nTo Request access to our <b>Talent Pool</b> you just need to send us your information.\n</string>


    <string name="title"></string>
    <string name="id"></string>
    <string name="residence"></string>
    <string name="keywords"></string>
    <string name="experience"></string>
    <string name="academic"></string>
    <string name="industries"></string>
    <string name="salary"></string>
    <string name="motivation"></string>


</resources>
