<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="116dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/industries"
            app:srcCompat="@drawable/ic_airplanemode_active_black_24dp" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/industries"
            app:srcCompat="@drawable/ic_monetization_on_black_24dp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="172dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal|center_vertical|left"
            android:text="Relevant Industries"
            android:textColor="@color/colorTecDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/academic" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="172dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal|center_vertical|left"
            android:text="Salary Expectation"
            android:textColor="@color/colorTecDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/industries" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="233dp"
            android:layout_height="28dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="116dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal|center_vertical|left"
            android:text="Motivation to work abroad"
            android:textColor="@color/colorTecDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/industries" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/experience"
            app:srcCompat="@drawable/ic_school_black_24dp" />

        <TextView
            android:id="@+id/academic"
            android:layout_width="298dp"
            android:layout_height="63dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/academic"
            android:textColor="@color/colorTecDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/industries"
            android:layout_width="293dp"
            android:layout_height="49dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/industries"
            android:textColor="@color/colorTecDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/salary"
            android:layout_width="296dp"
            android:layout_height="53dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/salary"
            android:textColor="@color/colorTecDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/motivation"
            android:layout_width="275dp"
            android:layout_height="55dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginTop="92dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/motivation"
            android:textColor="@color/colorTecDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="172dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal|center_vertical|left"
            android:text="Academic Background"
            android:textColor="@color/colorTecDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/experience" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/academic"
            app:srcCompat="@drawable/ic_business_center_black_24dp" />

        <TextView
            android:id="@+id/experience"
            android:layout_width="302dp"
            android:layout_height="60dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/experience"
            android:textColor="@color/colorTecDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="172dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal|center_vertical|left"
            android:text="Years of experience"
            android:textColor="@color/colorTecDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/keywords" />

        <TextView
            android:id="@+id/keywords"
            android:layout_width="304dp"
            android:layout_height="65dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/keywords"
            android:textColor="@color/colorTecDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <ImageView
            android:id="@+id/res_image"
            android:layout_width="146dp"
            android:layout_height="102dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="76dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pt" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="18dp"
            android:layout_height="1048dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="185dp"
            android:layout_height="42dp"
            android:layout_marginTop="92dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/title"
            android:textColor="@color/colorTecDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/res_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Software Engineering IT" />

        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/id"
            android:textColor="@color/colorTecDark"
            app:layout_constraintStart_toEndOf="@+id/res_image"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="ID 12345" />

        <TextView
            android:id="@+id/residence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/residence"
            android:textColor="@color/colorTecDark"
            app:layout_constraintStart_toEndOf="@+id/res_image"
            app:layout_constraintTop_toBottomOf="@+id/id"
            tools:text="Portugal" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="33dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/res_image"
            app:srcCompat="@drawable/ic_home_black_24dp" />

        <!-- Header aligned to top -->


        <TextView
            android:id="@+id/textView9"
            android:layout_width="91dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal|center_vertical|left"
            android:text="Residence"
            android:textColor="@color/colorTecDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/res_image" />

        <TextView
            android:id="@+id/residence2"
            android:layout_width="277dp"
            android:layout_height="34dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/residence"
            android:textColor="@color/colorTecDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:text="Sapin" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/residence2"
            app:srcCompat="@drawable/ic_search_black_24dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="92dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal|center_vertical|left"
            android:text="Keywords"
            android:textColor="@color/colorTecDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/residence2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/keywords"
            app:srcCompat="@drawable/ic_work_black_24dp" />

        <Button
            android:id="@+id/send_request"
            android:layout_width="128dp"
            android:layout_height="74dp"
            android:background="@color/blueTec3"
            android:fontFamily="sans-serif-condensed"
            android:text="Send Rquest"
            android:textAllCaps="false"
            android:textColor="@color/colorTecLight"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/motivation"
            app:layout_constraintVertical_bias="0.684" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>